--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,15 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+arch/arm/kernel/vmlinux.lds
+lib/gen_crc32table
+scripts/basic/docproc
+scripts/basic/fixdep
+scripts/basic/hash
+scripts/bin2c
+scripts/conmakehash
+scripts/kconfig/conf
+scripts/mod/mk_elfconfig
+scripts/mod/modpost
+usr/gen_init_cpio
+
